tests/errors/generic_null_to_nonnull_argument.dang
# Null flowing through a generic function cannot be passed to a non-null argument
id(x: a): a { x }

takes(value: Int!): Int! { value }

pub result = takes(id(null))
